[project]
name = "lenum"
version = "0.1.0"
description = "Linux state enumerator proof of concept"
readme = "README.md"
authors = [
    { name = "kodi nelson", email = "kneldev@gmail.com" }
]
requires-python = ">=3.14"
dependencies = []

[project.scripts]
lenum = "lenum.cli:main"

[build-system]
requires = ["uv_build>=0.11.22,<0.12.0"]
build-backend = "uv_build"
